一点点小增加

--- a/操作分布式搜索和分析引擎Elasticsearch/索引/mapping_properties_参数type.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/mapping_properties_参数type.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'\\ntext:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/text.html\\nkeyword:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/keyword.html\\n\\nnumber:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/number.html\\n\\nboolean:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/boolean.html\\n\\ndate:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/date.html\\n\\narray:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/array.html\\n\\nobject:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/object.html\\nnested:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/nested.html\\nflattened(can help prevent a mappings explosion from having too many distinct field mappings):https://www.elastic.co/guide/en/elasticsearch/reference/7.11/flattened.html\\n\\njoin:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/parent-join.html\\n\\nrange:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/range.html\\n\\nip:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/ip.html\\n\\ntoken-count:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/token-count.html\\n'"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "text:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/text.html\n",
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch"
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
@@ -64,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +117,8 @@
     "PUT es0\n",
     "`body`\n",
     "'''\n",
+    "if es.indices.exists('es0'):\n",
+    "    es.indices.delete('es0')\n",
     "es.indices.create(index='es0', body=body)"
    ],
    "metadata": {
@@ -119,13 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'age': {'type': 'long'},\n    'date': {'type': 'date'},\n    'information': {'type': 'text'},\n    'manager': {'type': 'object'},\n    'name': {'type': 'keyword'},\n    'play': {'type': 'boolean'},\n    'user': {'type': 'nested'}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1675735126490',\n    'number_of_replicas': '1',\n    'uuid': 'Oo0BjrByRQCD3oW_lOB4Ng',\n    'version': {'created': '7110299'}}}}}"
+      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'age': {'type': 'long'},\n    'date': {'type': 'date'},\n    'information': {'type': 'text'},\n    'manager': {'type': 'object'},\n    'name': {'type': 'keyword'},\n    'play': {'type': 'boolean'},\n    'user': {'type': 'nested'}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1692711621626',\n    'number_of_replicas': '1',\n    'uuid': 'RYvEZ0k_SGqT4UBtv1-n0w',\n    'version': {'created': '7110299'}}}}}"
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 0,\n '_primary_term': 1}"
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +167,7 @@
    "source": [
     "es.index(index='es0', id=0, body={\n",
     "    \"name\": \"dcdmm\",\n",
-    "    \"information\": \"love your life\",\n",
+    "    \"information\": [\"love your life\", \"hello python\"],  # 数组中的值必须具有相同的数据类型\n",
     "    \"age\": 12,\n",
     "    \"date\": \"2015-01-01\",\n",
     "    \"play\": True,\n",
@@ -190,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'age': {'type': 'long'},\n    'date': {'type': 'date'},\n    'information': {'type': 'text'},\n    'love': {'type': 'text',\n     'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n    'manager': {'properties': {'age': {'type': 'long'},\n      'name': {'properties': {'first': {'type': 'text',\n         'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n        'last': {'type': 'text',\n         'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}}},\n    'name': {'type': 'keyword'},\n    'play': {'type': 'boolean'},\n    'score': {'type': 'long'},\n    'user': {'type': 'nested',\n     'properties': {'first': {'type': 'text',\n       'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n      'last': {'type': 'text',\n       'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1675735126490',\n    'number_of_replicas': '1',\n    'uuid': 'Oo0BjrByRQCD3oW_lOB4Ng',\n    'version': {'created': '7110299'}}}}}"
+      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'age': {'type': 'long'},\n    'date': {'type': 'date'},\n    'information': {'type': 'text'},\n    'love': {'type': 'text',\n     'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n    'manager': {'properties': {'age': {'type': 'long'},\n      'name': {'properties': {'first': {'type': 'text',\n         'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n        'last': {'type': 'text',\n         'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}}},\n    'name': {'type': 'keyword'},\n    'play': {'type': 'boolean'},\n    'score': {'type': 'long'},\n    'user': {'type': 'nested',\n     'properties': {'first': {'type': 'text',\n       'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}},\n      'last': {'type': 'text',\n       'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1692711621626',\n    'number_of_replicas': '1',\n    'uuid': 'RYvEZ0k_SGqT4UBtv1-n0w',\n    'version': {'created': '7110299'}}}}}"
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n '_seq_no': 0,\n '_primary_term': 1,\n 'found': True,\n '_source': {'name': 'dcdmm',\n  'information': 'love your life',\n  'age': 12,\n  'date': '2015-01-01',\n  'play': True,\n  'love': ['football', 'game', 'swim', 'run'],\n  'score': [1, 2, 3, 1],\n  'manager': {'age': 30, 'name': {'first': 'John', 'last': 'Smith'}},\n  'user': [{'first': 'John', 'last': 'Smith'},\n   {'first': 'Alice', 'last': 'White'}]}}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n '_seq_no': 0,\n '_primary_term': 1,\n 'found': True,\n '_source': {'name': 'dcdmm',\n  'information': ['love your life', 'hello python'],\n  'age': 12,\n  'date': '2015-01-01',\n  'play': True,\n  'love': ['football', 'game', 'swim', 'run'],\n  'score': [1, 2, 3, 1],\n  'manager': {'age': 30, 'name': {'first': 'John', 'last': 'Smith'}},\n  'user': [{'first': 'John', 'last': 'Smith'},\n   {'first': 'Alice', 'last': 'White'}]}}"
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True}"
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
