之前的一些优化

--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/wildcard.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/wildcard.ipynb
@@ -67,7 +67,8 @@
     "        \"wildcard\": {\n",
     "            \"user.id\": {\n",
     "                \"value\": \"ki*y\",\n",
-    "                \"boost\": 1\n",
+    "                \"boost\": 1,\n",
+    "                \"case_insensitive\": False  # 是否忽略大小写(默认:False)\n",
     "            }\n",
     "        }\n",
     "    }\n",
