--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/regexp.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/regexp.ipynb
@@ -68,7 +68,8 @@
     "            \"user.id\": {\n",
     "                # 正则表达式:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/regexp-syntax.html\n",
     "                \"value\": \"ki.*[xyz]\",\n",
-    "                \"boost\": 1\n",
+    "                \"boost\": 1,\n",
+    "                \"case_insensitive\": True,  # 是否忽略大小写(默认:False)\n",
     "            }\n",
     "        }\n",
     "    }\n",
