--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch"
+    "from elasticsearch import Elasticsearch\n",
+    "# 参考:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/analysis-custom-analyzer.html"
    ]
   },
   {
