--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
@@ -34,6 +34,7 @@
     "            \"analyzer\": {\n",
     "                \"my_custom_analyzer\": {\n",
     "                    \"type\": \"custom\",\n",
+    "                    # A built-in or customised tokenizer. (Required)\n",
     "                    \"tokenizer\": \"standard\",\n",
     "                    # Character filters are used to preprocess the stream of characters before it is passed to the tokenizer.\n",
     "                    # 参考:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/analysis-charfilters.html\n",
