--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义normalizer.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义normalizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,9 +60,14 @@
     "            \"normalizer\": {\n",
     "                \"my_normalizer\": {\n",
     "                    \"type\": \"custom\",\n",
-    "                    \"char_filter\": [\"quote\"],\n",
+    "                    \"char_filter\": [\n",
+    "                        \"quote\"  # 自定义\n",
+    "                    ],\n",
     "                    # 参考:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/analysis-tokenfilters.html\n",
-    "                    \"filter\": [\"lowercase\", \"cjk_width\"]\n",
+    "                    \"filter\": [\n",
+    "                        \"lowercase\",  # 内置\n",
+    "                        \"cjk_width\"  # 内置\n",
+    "                    ]\n",
     "                }\n",
     "            }\n",
     "        }\n",
@@ -91,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 0,\n '_primary_term': 1}"
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 0,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 1, 'relation': 'eq'},\n  'max_score': 0.2876821,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.2876821,\n    '_source': {'foo': 'HPV42型低危型(定量)'}}]}}"
+      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 1, 'relation': 'eq'},\n  'max_score': 0.2876821,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.2876821,\n    '_source': {'foo': 'HPV42型低危型(定量)'}}]}}"
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 0,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 1, 'relation': 'eq'},\n  'max_score': 0.2876821,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.2876821,\n    '_source': {'foo': 'HPV42型低危型(定量)'}}]}}"
+      "text/plain": "{'took': 0,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 0, 'relation': 'eq'},\n  'max_score': None,\n  'hits': []}}"
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,6 +169,50 @@
     "        }\n",
     "    }\n",
     "})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['hpv42型低危型定量']"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis = es.indices.analyze(index=\"es0\", body={\n",
+    "    \"normalizer\": \"my_normalizer\",\n",
+    "    \"text\": \"HPV-42型低危型（定量）\"\n",
+    "})\n",
+    "\n",
+    "# 查看过滤后结果\n",
+    "tokens = [token_info['token'] for token_info in analysis['tokens']]\n",
+    "tokens"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "es.indices.delete('es0')"
    ],
    "metadata": {
     "collapsed": false,
