进一步印证.

--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 287,
    "metadata": {
     "collapsed": true
    },
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 288,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 265,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,6 +53,9 @@
     "                \"emoticons\": {\n",
     "                    \"type\": \"mapping\",\n",
     "                    \"mappings\": [\n",
+    "                        \"II => 2\",\n",
+    "                        \"ii => 2\",\n",
+    "                        \"Ⅱ => 2\"\n",
     "                        \"III => 3\",\n",
     "                        \"iii => 3\",\n",
     "                        \"Ⅲ => 3\"\n",
@@ -92,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 289,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'information': {'type': 'text',\n     'analyzer': 'my_custom_analyzer'}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1697443924867',\n    'analysis': {'filter': {'english_stop': {'type': 'stop',\n       'stopwords': '_english_'}},\n     'analyzer': {'my_custom_analyzer': {'filter': ['lowercase',\n        'english_stop'],\n       'char_filter': ['emoticons'],\n       'type': 'custom',\n       'tokenizer': 'ik_max_word'}},\n     'char_filter': {'emoticons': {'type': 'mapping',\n       'mappings': ['III => 3', 'iii => 3', 'Ⅲ => 3']}}},\n    'number_of_replicas': '1',\n    'uuid': 'yrDWd5gCSXiDe0wxdTqxcA',\n    'version': {'created': '7110299'}}}}}"
+      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {'properties': {'information': {'type': 'text',\n     'analyzer': 'my_custom_analyzer'}}},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1697448196171',\n    'analysis': {'filter': {'english_stop': {'type': 'stop',\n       'stopwords': '_english_'}},\n     'analyzer': {'my_custom_analyzer': {'filter': ['lowercase',\n        'english_stop'],\n       'char_filter': ['emoticons'],\n       'type': 'custom',\n       'tokenizer': 'ik_max_word'}},\n     'char_filter': {'emoticons': {'type': 'mapping',\n       'mappings': ['II => 2',\n        'ii => 2',\n        'Ⅱ => 2III => 3',\n        'iii => 3',\n        'Ⅲ => 3']}}},\n    'number_of_replicas': '1',\n    'uuid': 'l2hyad0DROSKJDB1_FezKg',\n    'version': {'created': '7110299'}}}}}"
      },
-     "execution_count": 266,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 293,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 0,\n '_primary_term': 1}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 2,\n 'result': 'updated',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 3,\n '_primary_term': 1}"
      },
-     "execution_count": 267,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 294,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '1',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 1,\n '_primary_term': 1}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '1',\n '_version': 3,\n 'result': 'updated',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 4,\n '_primary_term': 1}"
      },
-     "execution_count": 268,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,6 +157,31 @@
    "source": [
     "es.index(index='es0',\n",
     "         id=1,\n",
+    "         body={\"information\": \"乳腺BI-RADSii\"})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '2',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 5,\n '_primary_term': 1}"
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.index(index='es0',\n",
+    "         id=2,\n",
     "         body={\"information\": \"乳腺BI-RADS3\"})"
    ],
    "metadata": {
@@ -165,13 +193,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 296,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 1.9332589,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 1.9332589,\n    '_source': {'information': '乳腺BI-RADS3'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.5469647,\n    '_source': {'information': '乳腺BI-RADS2'}}]}}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '3',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 6,\n '_primary_term': 1}"
      },
-     "execution_count": 270,
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.index(index='es0',\n",
+    "         id=3,\n",
+    "         body={\"information\": \"乳腺BI-RADSⅢ\"})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'took': 2,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 4, 'relation': 'eq'},\n  'max_score': 1.8469727,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 1.8469727,\n    '_source': {'information': '乳腺BI-RADS3'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '3',\n    '_score': 1.8469727,\n    '_source': {'information': '乳腺BI-RADSⅢ'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADS2'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADSii'}}]}}"
+     },
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,13 +249,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 299,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'took': 2,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 4, 'relation': 'eq'},\n  'max_score': 1.3443439,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 1.3443439,\n    '_source': {'information': '乳腺BI-RADS2'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 1.3443439,\n    '_source': {'information': '乳腺BI-RADSii'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADS3'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '3',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADSⅢ'}}]}}"
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.search(index='es0', body={\n",
+    "    \"query\": {\n",
+    "        \"match\": {\n",
+    "            \"information\": {\n",
+    "                \"query\": \"乳腺BI-RADSii\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'took': 3,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 4, 'relation': 'eq'},\n  'max_score': 1.8469727,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 1.8469727,\n    '_source': {'information': '乳腺BI-RADS3'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '3',\n    '_score': 1.8469727,\n    '_source': {'information': '乳腺BI-RADSⅢ'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADS2'}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.19361557,\n    '_source': {'information': '乳腺BI-RADSii'}}]}}"
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.search(index='es0', body={\n",
+    "    \"query\": {\n",
+    "        \"match\": {\n",
+    "            \"information\": {\n",
+    "                \"query\": \"乳腺BI-RADS3\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
    "outputs": [
     {
      "data": {
       "text/plain": "['乳腺', 'bi-rads3', 'bi', 'rads', '3']"
      },
-     "execution_count": 271,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,13 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 302,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True}"
      },
-     "execution_count": 272,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
